Responsiveness for Mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@
 body {
     margin: 0;
     width: 100vw;
+    max-width: 100vw;
     height: 100vh;
+    max-height: 100vh;
     background: linear-gradient(90deg, rgb(144, 202, 222), rgb(137, 196, 215));
     font-family: "Rubik", sans-serif;
     overflow: hidden;
@@ -19,9 +21,9 @@ header {
     justify-content: center;
     align-items: flex-start;
     /* border-bottom: 2px solid white; */
-    position: fixed;
-    width: 100vw;
-
+    /* position: fixed; */
+    max-width: 100vw;
+    max-height: 6rem;
     white-space: nowrap;
 }
 
@@ -34,11 +36,19 @@ header h1 {
     margin-top: 0.5rem;
 }
 
+#sub-header-row {
+    display: flex;
+    justify-content: space-between;
+    max-width: 100vw;
+    margin: 0 1rem;
+}
+
 main {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100%;
+    max-width: 100vw;
     color: white;
 }
 
@@ -58,18 +68,19 @@ main {
     padding: 0.4rem;
     background:rgb(0 0 0 / .2);
     color: white;
-    position: absolute;
-    top: 4.75rem;
-    left: 1rem;
+    /* position: absolute; */
+    /* top: 4.75rem; */
+    /* left: 1rem; */
     /* box-shadow: 5px 5px 20px rgb(0 0 0 / .2); */
     display: none;
 }
 
 #player-change {
     font-family: 'Rubik';
-    position: absolute;
+    /* position: absolute; */
     right: 1rem;
     min-width: 3rem;
+    height: 1.8rem;
     background: green;
     border-radius: 10px;
     border: 1px solid white;
@@ -82,8 +93,8 @@ main {
     padding: 0.4rem;
     background:rgb(255 255 255 / .2);
     color: rgb(0 0 0 / .4);
-    position: absolute;
-    top: 4.75rem;
+    /* position: absolute;
+    top: 4.75rem; */
     /* box-shadow: 5px 5px 20px rgb(0 0 0 / .2); */
     opacity: 0;
     cursor: pointer;
@@ -167,7 +178,7 @@ button:active {
     min-width:  19rem;
     display: flex;
     flex-flow: column nowrap;
-    margin-top: 6rem;
+    margin-top: 2rem;
 }
 
 .question__question-p {
@@ -256,16 +267,17 @@ input[type='radio']:checked:after {
     border: 3.5px solid white;
     border-right: none;
     box-shadow: 5px 5px 20px rgb(0 0 0 / .2);
-    min-width:  20rem;
+    width: 20rem;
     max-width: 20rem;
     min-height: 50%;
     display: flex;
     flex-flow: column nowrap;
-    margin-top: 8rem;
-    position: absolute;
+    /* margin-top: 8rem; */
+    position: fixed;
     right: 0;
-    z-index: 10;
+    z-index: 9;
     transform: translateX(97%);
+    /* visibility: hidden; */
 }
 
 .highscore-display h2 {
@@ -289,11 +301,11 @@ input[type='radio']:checked:after {
 
 #checkbox {
     position: absolute;
-    top: 18.25rem;
+    top: 18.7rem;
+    right: 0.1rem;
     width: 2rem;
     height: 4rem;
     opacity: 0%;
-    right: 0.4rem;
     z-index: 11;
     cursor: pointer;
 
@@ -354,13 +366,13 @@ input[type='radio']:checked:after {
 
 
 @keyframes example {
-    0%   {transform: translateX(95%);}
-    100% {transform: none}
+    0%   {transform: translateX(97%);}
+    100% {transform: translateX(0%);}
   }
 
 #checkbox:checked ~ .highscore-display {
     
-    transform: none;
+    transform: translateX(0%);
     animation-name: example;
     animation-duration: 500ms;
     animation-direction: alternate;
