--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     width: 100vw;
     max-width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     max-height: 100vh;
     background: linear-gradient(90deg, rgb(144, 202, 222), rgb(137, 196, 215));
     font-family: "Rubik", sans-serif;
